--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <head>
-            <title>Dom Manipulation</title>
-            <script src="script.js" defer></script>
-        </head>
-        
-    </body>
-</html> 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
+</body>
+</html>
