--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="script.js" defer>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1 id="main-heading">Favorite Movie Franchise</h1>
         <ul>
             <li class="list-items">The Matrix</li>
