--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="script.js" defer>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
         <h1 id="main-heading">Favorite Movie Franchise</h1>
         <ul>
-            <li class="list-items">The Matrix</li>
+            <li class="list-items"><span>Neo</span> The Matrix</li>
             <li class="list-items">Star Wars</li>
             <li class="list-items">Harry Potter</li>
             <li class="list-items">Lord of the Rings</li>
             <li class="list-items">Marvel</li>
         </ul>
     </div>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
