--- a/js-amazon-proj/amazon.html
+++ b/js-amazon-proj/amazon.html
@@ -54,6 +54,6 @@
     <div class="main">
       <div class="products-grid js-product-grid"></div>
     </div>
-    <script src="scripts/amazon.js"></script>
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
