--- a/js-amazon-proj/amazon.html
+++ b/js-amazon-proj/amazon.html
@@ -52,7 +52,9 @@
     </div>
     
     <div class="main">
-      <div class="products-grid js-product-grid"></div>
+      <div class="products-grid js-product-grid">
+        
+      </div>
     </div>
     <script type="module" src="scripts/amazon.js"></script>
   </body>
