--- a/product-review-card/index.html
+++ b/product-review-card/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Preview Card</title>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
             <p class="name-of-product">Perfume</p>
             <h1>Gabrielle Essence Eau De Parfum</h1>
             <p class="product-description">A floral solar and voluptuous interpretation composed by Olivier polge Perfumer-Creator for the House of CHANEL</p>
-            <div>
+            <div class="price">
                 <h2 class="product-price">$149.99</h2>
                 <p class="product-discount">$169.99</p>
             </div>
